@@ -497,9 +497,9 @@ Bool __compare_binding(
 	{
 		return True;
 	}
-	if (STROKE_CODE((BIND_IS_STROKE_BINDING(type) &&
-			 (strcmp(b->Stroke_Seq,stroke) == 0) &&
-			 b->Button_Key == button_keycode)))
+	if (0 STROKE_CODE((|| (BIND_IS_STROKE_BINDING(type) &&
+			       (strcmp(b->Stroke_Seq,stroke) == 0) &&
+			       b->Button_Key == button_keycode))))
 	{
 		return True;
 	}
@@ -582,9 +582,9 @@ Bool MatchBindingExactly(
 	{
 		return False;
 	}
-	if (0 || STROKE_CODE((BIND_IS_STROKE_BINDING(type) &&
-			      (b->Button_Key != button ||
-			       (strcmp(b->Stroke_Seq,stroke) != 0)))))
+	if (0 STROKE_CODE((|| (BIND_IS_STROKE_BINDING(type) &&
+			       (b->Button_Key != button ||
+				(strcmp(b->Stroke_Seq,stroke) != 0))))))
 	{
 		return False;
 	}
